--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "names = list(map(restaurants[0]))\n",
+    "names = list(map(\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
