automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda restaurants: \n",
+    "names = None\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
