automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,22 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0], [0], [0], [0], [0], [0], [0], [0]]"
+       "[['name'],\n",
+       " ['name'],\n",
+       " ['name'],\n",
+       " ['name'],\n",
+       " ['name'],\n",
+       " ['name'],\n",
+       " ['name'],\n",
+       " ['name']]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = list(map(lambda name: [0], restaurants))\n",
+    "names = list(map(lambda name: ['name'], restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
