--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "names = list(map(lambda name: ['name'], restaurants))\n",
+    "names = list(map(lambda name: re, restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
