automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,29 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[['name'],\n",
-       " ['name'],\n",
-       " ['name'],\n",
-       " ['name'],\n",
-       " ['name'],\n",
-       " ['name'],\n",
-       " ['name'],\n",
-       " ['name']]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-1dce996a2a6e>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-1dce996a2a6e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names = list(map(lambda name: restaurants['name]', restaurants))\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "names = list(map(lambda name: re, restaurants))\n",
+    "names = list(map(lambda name: restaurants['name]', restaurants))\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
