--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = lambda restaurant: restaurant['rcount']\n",
+    "total_reviews = lambda restaurant: restaurant['review_count'] += \n",
     "total_reviews # 3420"
    ]
   },
