automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,11 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-0f6fb4a4be95>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-0f6fb4a4be95>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = (lambda restaurant: restaurant['review_count'] += , restaurants)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "total_reviews = lambda restaurant: restaurant['review_count'] += , restaurants\n",
+    "total_reviews = (lambda restaurant: restaurant['review_count'] += , restaurants)\n",
     "total_reviews # 3420"
    ]
   },
