--- a/index.ipynb
+++ b/index.ipynb
@@ -188,20 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-15-0f6fb4a4be95>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-16-8a2e1578fc96>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-0f6fb4a4be95>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = (lambda restaurant: restaurant['review_count'] += , restaurants)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-8a2e1578fc96>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = (lambda restaurant: restaurant['review_count'] +, restaurants)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "total_reviews = (lambda restaurant: restaurant['review_count'] += , restaurants)\n",
+    "total_reviews = (lambda restaurant: restaurant['review_count'] +, restaurants)\n",
     "total_reviews # 3420"
    ]
   },
