--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "total_reviews = (lambda restaurant: restaurant['review_count'] +, restaurants)\n",
+    "total_reviews = for \n",
     "total_reviews # 3420"
    ]
   },
