--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
     }
    ],
    "source": [
-    "total_reviews = for \n",
+    "total_reviews = 0\n",
+    "    for rev\n",
     "total_reviews # 3420"
    ]
   },
