--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "    for rev\n",
+    "    for review_count in rev\n",
     "total_reviews # 3420"
    ]
   },
