automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,8 @@
    "source": [
     "total_reviews = 0\n",
     "    for review_count in review_counts:\n",
-    "        total\n",
+    "        total_reviews += review_count\n",
+    "    return\n",
     "total_reviews # 3420"
    ]
   },
