--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "def format_restaurants(restaurants):\n",
-    "    list(map(lambda restaurants: format_restaurant, restaurants))"
+    "    list(map(format_restaurant, restaurants))"
    ]
   },
   {
