--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return (list(filter(, restaurants)))"
+    "    return (list(filter(restau, restaurants)))"
    ]
   },
   {
