automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return (list(filter(restaurant, restaurants)))"
+    "    return (list(filter(restaurant['is_closed'], restaurants)))"
    ]
   },
   {
