--- a/index.ipynb
+++ b/index.ipynb
@@ -351,12 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return (list(filter(restaurant['is_closed'], restaurants)))"
+    "    return (list(filter(restaurant['is_closed'] == False, restaurants)))"
    ]
   },
   {
