--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    if "
+    "    return list"
    ]
   },
   {
