automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,12 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: len(restaurant['price'] == '$', restaurants))"
+    "    return list(filter(lambda restaurant: len(restaurant['price']) == 1, restaurants))"
    ]
   },
   {
